listings/ch08-common-collections/listing-08-19/output.txt
$ cargo run
   Compiling collections v0.1.0 (file:///projects/collections)
error[E0277]: the type `String` cannot be indexed by `{integer}`
(エラー: 型`String`は`{Integer}`で添え字アクセスできません)
 --> src/main.rs:3:16
  |
3 |     let h = s1[0];
  |                ^ `String` cannot be indexed by `{integer}`
  |                 (`String`は`{Integer}`で添え字アクセスできません)
  |
  = help: the trait `Index<{integer}>` is not implemented for `String`
    (ヘルプ: `Index<{Integer}>`というトレイトが`String`に対して実装されていません)
  = help: the following other types implement trait `Index<Idx>`:
    (ヘルプ: 以下の型であればトレイト`Index<Idx>`を実装しています:)
            <String as Index<RangeFull>>
            <String as Index<std::ops::Range<usize>>>
            <String as Index<RangeFrom<usize>>>
            <String as Index<RangeTo<usize>>>
            <String as Index<RangeInclusive<usize>>>
            <String as Index<RangeToInclusive<usize>>>

For more information about this error, try `rustc --explain E0277`.
error: could not compile `collections` (bin "collections") due to 1 previous error
